# atomic_habits_app

./: .env_sample  README.md  pyproject.toml
atomic_habits/: admin.py  apps.py  manage.py  models.py  paginations.py  serializers.py  services.py  task.py  tasks.py  urls.py  views.py
atomic_habits/atomic_habits/: asgi.py  settings.py  urls.py  wsgi.py
atomic_habits/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
users/: admin.py  manage.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
users/users/: asgi.py  settings.py  urls.py  wsgi.py
